--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 					</div>
 				</div>
 				<div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-					<form action="http://localhost:3000/send" method="POST">
+					<form action="http://13.233.254.203:3000/send" method="POST">
 						<div class="row">
 							<div class="col-12 mb-3">
 								<input type="text" name="name" class="form-control" placeholder="Your Name" required>
